manifests/trivy-system/netpol-trivy-scan-jobs.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: trivy-scan-jobs
  namespace: trivy-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/managed-by: trivy-operator
  ingressDeny:
    - fromEntities:
        - world
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: trivy-server
      toPorts:
        - ports:
            - port: "4954"
              protocol: TCP
    - toCIDR:
        - 0.0.0.0/0
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app: harbor
            component: nginx
            io.kubernetes.pod.namespace: harbor
      toPorts:
        - ports:
            - port: "8443"
              protocol: TCP
