manifests/trivy-system/netpol-trivy-server.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: trivy-server
  namespace: trivy-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: trivy-server
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/managed-by: trivy-operator
        - matchLabels:
            app.kubernetes.io/name: trivy-operator
      toPorts:
        - ports:
            - port: "4954"
              protocol: TCP
    - fromEntities:
        - host
      toPorts:
        - ports:
            - port: "4954"
              protocol: TCP
  egress:
    - toFQDNs:
        - matchName: "mirror.gcr.io"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
